# Etfw

./: CMakeLists.txt  LICENSE  README.md  make
docs/: FunctionalReqs.csv  TechnicalReqs.csv
examples/: CMakeLists.txt
examples/ActiveWithChildren/: ActiveWithChildren.cpp  CMakeLists.txt
examples/Messaging/: CMakeLists.txt  Common.hpp  Messaging.cpp  MsgScheduler.hpp  StatsHandler.hpp  design_considerations.txt
examples/Messaging/App1/: ActiveApp1.hpp  Cfg.hpp  Msg.hpp
examples/Messaging/App2/: App2.hpp  Cfg.hpp  Child.hpp  Msg.hpp  MsgHandler.hpp  MsgProcessor.hpp
examples/Messaging/DeviceMgr/: Cfg.hpp  Msg.hpp
examples/Messaging/StatsMon/: App.hpp  Cfg.hpp  Msg.hpp  StatsHandler.hpp  StatsMsgTbl.hpp  desc.txt
examples/PassiveWithChildren/: CMakeLists.txt  PassiveWithChildren.cpp
examples/RuntimeExecutor/: CMakeLists.txt  RuntimeExecutor.cpp
examples/StoredAppExecutor/: CMakeLists.txt  StoredAppExecutor.cpp
examples/TmpActive/: CMakeLists.txt  TmpActive.cpp
inc/etfw/: Status.hpp  etfw_assert.hpp  etl_profile.h  status.hpp
inc/etfw/exec/: ExecApp.hpp  ExecAppCfg.hpp  README.md
inc/etfw/msg/: BlockingMsgQueue.hpp  Broker.hpp  Context.hpp  Message.hpp  MsgBroker.hpp  MsgContext.hpp  MsgHelper.hpp  MsgPipe.hpp  MsgPool.hpp  Pipe.hpp  Pkt.hpp  Pool.hpp  Router.hpp  Subscription.hpp  TlmReqHandler.hpp
inc/etfw/os/: CountSem.hpp  File.hpp  Mutex.hpp  OsTypes.hpp  README.md  Select.hpp  Socket.hpp  Task.hpp
inc/etfw/svcs/: App.hpp  AppChild.hpp  CommonTraits.hpp  Executor.hpp  Runner.hpp  SvcCfg.hpp  SvcRegistry.hpp  SvcTypes.hpp  iSvc.hpp
inc/etfw/svcs/log/: Logger.hpp
inc/etfw/svcs/msg/: BlockingMsgQueue.hpp  Message.hpp  MsgBroker.hpp  MsgRtr.hpp  Router.hpp
src/msg/: Broker.cpp  CMakeLists.txt  Context.cpp  MsgContext.cpp  Pkt.cpp  Pool.cpp
src/os/posix/: CMakeLists.txt  CountSem.cpp  File.cpp  Mutex.cpp  Select.cpp  Socket.cpp  Task.cpp
src/svcs/: App.cpp  CMakeLists.txt  Executor.cpp  Runner.cpp  iSvc.cpp
test/: CMakeLists.txt  _test_msg_pool.cpp  test_app.cpp  test_msg_broker.cpp  test_msg_pool.cpp  test_msg_pp.cpp  ut_framework.hpp
